--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -6,7 +6,7 @@ Date: 2023-05-09
 Author: ltuijnder, ahess
 Maintainer: ltuijnder <lennart.tuijnder@openanalytics.eu>
 Description: Convert tinytest test's results ouptut to JUnit xml to allow it to be used in the jenkins pipeline. 
-Imports: 
+Suggests: 
 	tinytest
 License: file LICENSE
 RoxygenNote: 7.2.3
