--- a/.github/workflows/check-standard.yml
+++ b/.github/workflows/check-standard.yml
@@ -41,7 +41,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          working-directory: "./editbl"
+          working-directory: "./tinytest2JUnit"
           extra-packages: any::rcmdcheck
           needs: check
 
