--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -16,8 +16,16 @@ jobs:
     
     steps:
       - uses: actions/checkout@v2     # checkout the repo
-      - run: npm ci                   # install packages
-      - run: npm test                 # run tests (configured to use jest-junit reporter)
+      - run: |
+          tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")),
+           file = file.path(getwd(), "results.xml"))
+        shell: Rscript {0}
+        
+     - name: Show tinytest output
+        if: always()
+        run: |
+          cat(readLines(file.path(getwd(), "results.xml")), sep = "")
+        shell: bash
 
       - name: Test Report
         uses: dorny/test-reporter@v1
