--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -25,10 +25,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           working-directory: "./tinytest2JUnit"          
-          extra-packages: any::tinytest2JUnit  
-      - run: | 
-          install.packages(list.files(".", "tinytest2JUnit_.*.tar.gz"), repos = NULL)
-        shell: Rscript {0}
+          extra-packages: local::. 
       - run: |
           tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")),
            file = file.path(getwd(), "results.xml"))
