--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -37,6 +37,8 @@ jobs:
         with:
           name: JUnit Tests           # Name of the check run which will be created
           path: results.xml           # Path to test results
-          reporter: jest-junit        # Format of test results
+          reporter: java-junit        # Format of test results
+          
+      
           
 
