try without having devtools installed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,6 @@
 
 image: r-base
 
-variables:
-  R_LIBS_USER: "$CI_PROJECT_DIR/ci/lib"
-  CHECK_DIR: "$CI_PROJECT_DIR/ci/logs"
-  BUILD_LOGS_DIR: "$CI_PROJECT_DIR/ci/logs/$CI_PROJECT_NAME.Rcheck"
-
 stages:		 # List of stages for jobs, and their order of execution
   - build
   - test
@@ -15,10 +10,9 @@ stages:		 # List of stages for jobs, and their order of execution
 build:       # This job runs in the build stage, which runs first.
   stage: build
   script:
-     - mkdir -p $R_LIBS_USER $BUILD_LOGS_DIR
-     - R -e 'devtools::install_deps(dep = T, lib = Sys.getenv("R_LIBS_USER"))'
-     - R -e 'devtools::check(check_dir = Sys.getenv("CHECK_DIR"))'
-     - R -e 'if (length(devtools::check_failures(path = Sys.getenv("BUILD_LOGS_DIR"), note = FALSE)) > 0) stop()'
+    - R -e 'install.packages(c("dplyr", "purrr", "testthat"))'
+    - R CMD build . --no-build-vignettes --no-manual
+    - R CMD check *tar.gz --no-build-vignettes --no-manual
   cache:
     paths:
     - $R_LIBS_USER
