--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,9 @@
 # followed examplte from https://www.r-bloggers.com/2019/02/developing-r-packages-with-usethis-and-gitlab-ci-part-iii/
 
-image: r-base
+variables:
+  R_LIBS_USER: "$CI_PROJECT_DIR/ci/lib"
+  CHECK_DIR: "$CI_PROJECT_DIR/ci/logs"
+  BUILD_LOGS_DIR: "$CI_PROJECT_DIR/ci/logs/$CI_PROJECT_NAME.Rcheck"
 
 stages:		 # List of stages for jobs, and their order of execution
   - build
@@ -9,10 +12,17 @@ stages:		 # List of stages for jobs, and their order of execution
 
 build:       # This job runs in the build stage, which runs first.
   stage: build
+  image:
+    name: gcr.io/kaniko-project/executor:v1.5.2-debug
+    entrypoint: [""]
   script:
-    - R -e 'install.packages(c("dplyr", "purrr", "testthat"))'
-    - R CMD build . --no-build-vignettes --no-manual
-    - R CMD check *tar.gz --no-build-vignettes --no-manual
+    - /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+      
+  rules:
+    - if: $CI_COMMIT_TAG
   cache:
     paths:
     - $R_LIBS_USER
