try with kaniko

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,12 +3,17 @@ image: rocker/rstudio
 
 build-job:
   stage: build
+  image:
+    name: gcr.io/kaniko-project/executor:v1.9.0-debug
+    entrypoint: [""]
   script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
-    - ls -al
-    - mkdir tinytest2JUnit
-    - cd tinytest2JUnit
-    - git clone https://gitlab.com/openanalytics/tinytest2junit.git
+    - /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+      --destination "${CI_REGISTRY_IMAGE}:${CI_COMMIT_TAG}"
+  rules:
+    - if: $CI_COMMIT_TAG
+
 test:  
   script:
     - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
