--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # followed example from https://www.r-bloggers.com/2019/02/developing-r-packages-with-usethis-and-gitlab-ci-part-iii/
-# image: rocker/rstudio  
+image: rocker/rstudio  
 
 build-job:
   stage: build
@@ -17,6 +17,7 @@ build-job:
 test:  
   script:
     - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
+    R -e 'roxygen2::roxygenize("tinytest2JUnit")'
     - R -e 'install.packages(c("tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
     - R CMD build . --no-build-vignettes --no-manual
     - PKG_FILE_NAME=$(ls -1t *.tar.gz | head -n 1)
