--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ build-job:
 test:  
   script:
     - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
+    - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
     - R -e 'install.packages(c("roxygen2","tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
     - R -e 'roxygen2::roxygenize("tinytest2JUnit")'
     - R CMD build . --no-build-vignettes --no-manual
