--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # followed example from https://www.r-bloggers.com/2019/02/developing-r-packages-with-usethis-and-gitlab-ci-part-iii/
-image: openanalytics/r-base:latest 
+image: registry.openanalytics.eu/shared/tinytest2junit:latest 
 
 cache:
   key: global-cache
@@ -9,12 +9,15 @@ cache:
 
 test:  
   script:
-    - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
+  #  - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
     - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
-    - echo "Installing dependencies"
-    - R -e 'install.packages(c("roxygen2","tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
-    - PKG="$(R CMD build . | grep -Eo '[[:alnum:]\._]+\.tar\.gz')"
-    - R CMD check ${PKG} --no-manual --no-build-vignettes
+  #  - echo "Installing dependencies"
+  #  - R -e 'install.packages(c("roxygen2","tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
+    - R -e 'roxygen2::roxygenize("tinytest2JUnit")'
+    - R CMD build tinytest2JUnit
+    - R CMD check tinytest2JUnit_*.tar.gz --no-manual --no-build-vignettes
+    - R -e 'install.packages(list.files(".", "tinytest2JUnit_.*.tar.gz"), repos = NULL)'
+    - R -e 'tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file(\\"tinytest\\", package =\\"tinytest2JUnit\\")), file = file.path(getwd(), \\"results.xml\\"))'
 
 
 
