--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # followed example from https://www.r-bloggers.com/2019/02/developing-r-packages-with-usethis-and-gitlab-ci-part-iii/
-image: registry.openanalytics.eu/shared/tinytest2junit:latest 
+image: openanalytics/r-base:latest 
 
 cache:
   key: global-cache
@@ -17,7 +17,7 @@ test:
     - R CMD build tinytest2JUnit
     - R CMD check tinytest2JUnit_*.tar.gz --no-manual --no-build-vignettes
     - R -e 'install.packages(list.files(".", "tinytest2JUnit_.*.tar.gz"), repos = NULL)'
-    - R -e 'tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file(\\"tinytest\\", package =\\"tinytest2JUnit\\")), file = file.path(getwd(), \\"results.xml\\"))'
+    - R -e 'tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file(\\"tinytest\\", package =\\"tinytest2JUnit\\")), file = file.path(getwd(), \\"results.xml\\"))
 
 
 
