--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,8 +11,8 @@ test:
   script:
   #  - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
     - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
-  #  - echo "Installing dependencies"
-  #  - R -e 'install.packages(c("roxygen2","tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
+    - echo "Installing dependencies"
+    - R -e 'install.packages(c("roxygen2","tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
     - R -e 'roxygen2::roxygenize("tinytest2JUnit")'
     - R CMD build tinytest2JUnit
     - R CMD check tinytest2JUnit_*.tar.gz --no-manual --no-build-vignettes
