--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,11 @@ cache:
   paths:
       - ci/lib/
 
+stages:
+   - build
+   - test
 
-test:  
+build:  
   script:
     - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
     - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
@@ -16,8 +19,16 @@ test:
     - R -e 'roxygen2::roxygenize("tinytest2JUnit")'
     - R CMD build tinytest2JUnit
     - R CMD check tinytest2JUnit_*.tar.gz --no-manual --no-build-vignettes
+  artifacts:
+    paths:
+      - "*.Rcheck"
+    name: logs
+    when: always
+    
+test:  
+  script:
     - R -e 'install.packages(list.files(".", "tinytest2JUnit_.*.tar.gz"), repos = NULL)'
-    - R -e 'tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")), file = file.path(getwd(), "results.xml"))
+    - R -e 'tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")), file = file.path(getwd(), "results.xml"))'
 
 
 
