--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ cache:
 stages:
    - build
    - test
-
+   
 build:  
   script:
     - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
@@ -27,8 +27,13 @@ build:
     
 test:  
   script:
-    - R -e 'install.packages(list.files(".", "tinytest2JUnit_.*.tar.gz"), repos = NULL)'
+     - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
+    - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
+    - echo "Installing dependencies"
+    - R -e 'install.packages(c("roxygen2","dplyr", "tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
+    - R -e 'roxygen2::roxygenize("tinytest2JUnit")'
     - R -e 'tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")), file = file.path(getwd(), "results.xml"))'
 
+    
 
 
