--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,10 +6,10 @@ cache:
    
 test:  
   script:
-    - apt-get update && apt-get install --no-install-recommends -y libxml2-dev
+    - apt-get update && apt-get install --no-install-recommends -y libxml2-dev xml2 library needed for roxygen2
     - echo "options(crayon.enabled=TRUE)" > .Rprofile   # force crayon  mode
     - echo "Installing dependencies"
-    - R -e 'install.packages(c("roxygen2","dplyr", "tinytest", "tinytest2JUnit"), repos = c(OA = "https://repos.openanalytics.eu/repo/public/", CRAN = "https://cloud.r-project.org"))'
+    - R -e 'install.packages("roxygen2" repos = "https://cloud.r-project.org"))'
     - R -e 'roxygen2::roxygenize("tinytest2JUnit")'
     - R CMD build tinytest2JUnit
     - R CMD check tinytest2JUnit_*.tar.gz --no-manual --no-build-vignettes
