--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytest2JUnit
 Type: Package
 Title: Convert tinytest output to JUnit XML
-Version: 0.0.1-9000
+Version: 0.1.0
 Author: Lennart Tuijnder, Anne-Katrin Hess
 Maintainer: Lennart Tuijnder <lennart.tuijnder@openanalytics.eu>
 Description: Convert tinytest test result output to JUnit XML for usage in e.g. a Jenkins pipeline. 
