--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytest2JUnit
 Type: Package
 Title: Convert Tinytest Output to JUnit XML
-Version: 0.1.2
+Version: 0.1.3
 Maintainer: Anne-Katrin Hess <anne-katrin.hess@openanalytics.eu>
 Authors@R: c(
 	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut", "cre")),
@@ -9,7 +9,7 @@ Authors@R: c(
 Description: Convert tinytest results output to JUnit XML for usage by CI/CD systems. 
 Suggests: 
 	tinytest
-License: GPL-3 + file LICENSE
+License: GPL-3
 Copyright: Open Analytics NV, 2023
 RoxygenNote: 7.2.3
 Encoding: UTF-8
