--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -25,7 +25,7 @@ jobs:
           working-directory: "./tinytest2JUnit"          
           extra-packages: local::. 
       - run: |
-          tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")),
+          library(tinytest2JUnit);tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")),
            file = file.path(getwd(), "results.xml"))
         shell: Rscript {0}   
 
