--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -1,12 +1,15 @@
 Package: tinytest2JUnit
 Type: Package
-Title: Convert Tinytest Output to JUnit XML
-Version: 0.1.3
+Title: Convert 'tinytest' Output to JUnit XML
+Version: 0.1.4-9000
 Maintainer: Anne-Katrin Hess <anne-katrin.hess@openanalytics.eu>
 Authors@R: c(
 	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut", "cre")),
 	person(given ="Lennart", family = "Tuijnder", email = "lennart.tuijnder@openanalytics.eu", role = c("aut")))
-Description: Convert tinytest results output to JUnit XML for usage by CI/CD systems. 
+Description: Unit testing is a solid component of automated CI/CD pipelines. As alternative to 'testthat' a light-weight,
+	zero-dependency package, called 'tinytest', was developed. To be able to integrate the 'tinytest' results into common CI/CD
+	systems the 'tinytest'-object needs to be converted to JUnit XML, which is the purpose of 'tinytest2JUnit',
+	while keeping the zero-dependency nature.
 Suggests: 
 	tinytest
 License: GPL-3
