--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -6,9 +6,9 @@ Maintainer: Anne-Katrin Hess <anne-katrin.hess@openanalytics.eu>
 Authors@R: c(
 	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut", "cre")),
 	person(given ="Lennart", family = "Tuijnder", email = "lennart.tuijnder@openanalytics.eu", role = c("aut")))
-Description: Unit testing is a solid component of automated CI/CD pipelines. As alternative to 'testthat' a light-weight,
-	zero-dependency package, called 'tinytest', was developed. To be able to integrate the 'tinytest' results into common CI/CD
-	systems the 'tinytest'-object needs to be converted to JUnit XML, which is the purpose of 'tinytest2JUnit',
+Description: Unit testing is a solid component of automated CI/CD pipelines. 'tinytest' - a light-weight,
+	zero-dependency  alternative to 'testthat' was developed. To be able to integrate 'tinytests' results into common CI/CD
+	systems the 'tinytests'-object needs to be converted to JUnit XML format. 'tinytest2JUnit' enables this conversion
 	while keeping the zero-dependency nature.
 Suggests: 
 	tinytest
