--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ test:
     - R CMD build tinytest2JUnit
     - R CMD check tinytest2JUnit_*.tar.gz --no-manual --no-build-vignettes
     - R -e 'install.packages(list.files(".", "tinytest2JUnit_.*.tar.gz"), repos = NULL)'
-    - R -e 'tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")), file = file.path(getwd(), "results.xml"))'
+    - R -e 'library(tinytest2JUnit);tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")), file = file.path(getwd(), "results.xml"))'
   artifacts:
     when: always
     paths:
