--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytest2JUnit
 Type: Package
 Title: Convert Tinytest Output to JUnit XML
-Version: 0.1.3
+Version: 0.1.3-9000
 Maintainer: Anne-Katrin Hess <anne-katrin.hess@openanalytics.eu>
 Authors@R: c(
 	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut", "cre")),
