--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytest2JUnit
 Type: Package
 Title: Convert 'tinytest' Output to JUnit XML
-Version: 1.0.0
+Version: 1.0.1
 Maintainer: Anne-Katrin Hess <anne-katrin.hess@openanalytics.eu>
 Authors@R: c(
 	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut", "cre")),
@@ -12,6 +12,7 @@ Description: Unit testing is a solid component of automated CI/CD pipelines. 'ti
 	while keeping the zero-dependency nature.
 Suggests: 
 	tinytest
+URL: https://github.com/openanalytics/tinytest2JUnit
 License: GPL-3
 Copyright: Open Analytics NV, 2023
 RoxygenNote: 7.2.3
