--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytest2JUnit
 Type: Package
 Title: Convert 'tinytest' Output to JUnit XML
-Version: 1.0.3-9000
+Version: 1.0.3-9001
 Maintainer: Anne-Katrin Hess <anne-katrin.hess@openanalytics.eu>
 Authors@R: c(
 	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut", "cre")),
@@ -10,6 +10,8 @@ Description: Unit testing is a solid component of automated CI/CD pipelines. 'ti
 	zero-dependency  alternative to 'testthat' was developed. To be able to integrate 'tinytests' results into common CI/CD
 	systems the 'tinytests'-object needs to be converted to JUnit XML format. 'tinytest2JUnit' enables this conversion
 	while keeping the zero-dependency nature.
+imports:
+	parallel
 Suggests: 
 	tinytest
 URL: https://github.com/openanalytics/tinytest2JUnit
