--- a/tinytest2JUnit/NAMESPACE
+++ b/tinytest2JUnit/NAMESPACE
@@ -4,4 +4,5 @@ S3method("[",tinytests2JUnit)
 S3method(format,XMLtag)
 S3method(print,XMLtag)
 export(runTestDir)
+export(testPackage)
 export(writeJUnit)
