--- a/tinytest2JUnit/NAMESPACE
+++ b/tinytest2JUnit/NAMESPACE
@@ -6,3 +6,15 @@ S3method(print,XMLtag)
 export(runTestDir)
 export(testPackage)
 export(writeJUnit)
+importFrom(parallel,clusterCall)
+importFrom(parallel,clusterEvalQ)
+importFrom(parallel,clusterExport)
+importFrom(parallel,makeCluster)
+importFrom(tinytest,run_test_file)
+importFrom(tinytest,tinytest)
+importFrom(tools,file_path_sans_ext)
+importFrom(utils,getFromNamespace)
+importFrom(utils,getSrcDirectory)
+importFrom(utils,getSrcFilename)
+importFrom(utils,getSrcLocation)
+importFrom(utils,tail)
