--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -2,10 +2,10 @@ Package: tinytest2JUnit
 Type: Package
 Title: Convert 'tinytest' Output to JUnit XML
 Version: 1.0.3-9002
-Maintainer: Anne-Katrin Hess <anne-katrin.hess@openanalytics.eu>
+Maintainer: Lennart Tuijnder <lennart.tuijnder@openanalytics.eu>
 Authors@R: c(
-	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut", "cre")),
-	person(given ="Lennart", family = "Tuijnder", email = "lennart.tuijnder@openanalytics.eu", role = c("aut")))
+	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut")),
+	person(given ="Lennart", family = "Tuijnder", email = "lennart.tuijnder@openanalytics.eu", role = c("aut", "cre")))
 Description: Unit testing is a solid component of automated CI/CD pipelines. 
 	'tinytest' - a lightweight, zero-dependency  alternative to 'testthat' was developed.
 	To be able to integrate 'tinytests' results into common CI/CD systems the test results from 
