--- a/tinytest2JUnit/DESCRIPTION
+++ b/tinytest2JUnit/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: tinytest2JUnit
 Type: Package
 Title: Convert 'tinytest' Output to JUnit XML
-Version: 1.1.1-9000
+Version: 1.1.2
 Maintainer: Lennart Tuijnder <lennart.tuijnder@openanalytics.eu>
 Authors@R: c(
 	person(given = "Anne-Katrin", family = "Hess", email = "anne-katrin.hess@openanalytics.eu", role = c("aut")),
@@ -20,7 +20,7 @@ Imports:
 URL: https://github.com/openanalytics/tinytest2JUnit
 BugReports: https://github.com/openanalytics/tinytest2JUnit/issues
 License: GPL-3
-Copyright: Open Analytics NV, 2023
+Copyright: Open Analytics NV, 2024
 RoxygenNote: 7.2.3
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
