--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -24,9 +24,7 @@ jobs:
         with:
           working-directory: "./tinytest2JUnit"          
           extra-packages: local::. 
-      - run: |
-          library(tinytest2JUnit);tinytest2JUnit::writeJUnit(tinytest::run_test_dir(system.file("tinytest", package ="tinytest2JUnit")),
-           file = file.path(getwd(), "results.xml"))
+      - run: tinytest2JUnit::testPackage("tinytest2JUnit", file = file.path(getwd(), "results.xml"))
         shell: Rscript {0}   
 
       - name: Test Report
